<project name="diylc-swing" basedir="." default="full">

	<taskdef name="bundleapp"
	             classname="com.oracle.appbundler.AppBundlerTask"  />

	<property name="src.dir" value="${basedir}/src" />

	<property name="lib.dir" value="${basedir}/lib" />
	<property name="build.dir" value="${basedir}/build" />
	<property name="jar.dir" value="${build.dir}/jar" />
	<property name="report.dir" value="${build.dir}/junitreport" />
	<property name="main.class" value="org.diylc.DIYLCStarter" />
	<property name="diylc.version" value="4.41.0" />
	
	<property name="win.jre.path" value="tools/jre/win/jre1.8.0_211.zip" />
	<property name="osx.jre.x86.path" value="tools/jre/osx/x86/jre17.zip" />
	<property name="osx.jre.arm.path" value="tools/jre/osx/arm/jre17.zip" />

	<property name="classes.dir" value="${build.dir}/temp/${ant.project.name}/classes" />
	<property name="test.classes.dir" value="${build.dir}/temp/${ant.project.name}/test.classes" />

	<target name="clean">
		<delete dir="${build.dir}" />
	</target>

	<!--change src dir-->
	<target name="compile">
		<ant antfile="../diylc-library/build.xml" target="jar" inheritAll="false" />
		<mkdir dir="${classes.dir}" />
		<echo>Compile with JDK ${java.runtime.version}</echo>
		<javac compiler="modern" encoding="8859_1" srcdir="${src.dir}" destdir="${classes.dir}" classpathref="class.path" includeantruntime="false">
			<compilerarg value="-proc:none" />
		</javac>
	</target>

	<target name="resource.copy">
		<copy todir="${classes.dir}">
			<fileset dir="${src.dir}">
				<exclude name="**/*.java" />
			</fileset>
		</copy>
	</target>

	<target name="lib.copy">
		<copy todir="${jar.dir}/lib" overwrite="true">
			<fileset dir="${basedir}/lib">
				<exclude name="**/*dll" />
			</fileset>
		</copy>
		<copy todir="${jar.dir}/library" overwrite="true">
			<fileset dir="${basedir}/library">
				<exclude name="**/*dll" />
			</fileset>
		</copy>
		<copy todir="${jar.dir}" overwrite="true">
			<fileset dir="${basedir}/lib/" includes="**/*.dll" />
		</copy>
	</target>

	<path id="class.path">
		<fileset dir="${basedir}">
			<include name="lib/**/*.jar" />
			<include name="library/**/*.jar" />
		</fileset>
	</path>

	<manifestclasspath jarfile="${ant.project.name}.jar" property="manifest.class.path">
		<classpath refid="class.path" />
	</manifestclasspath>

	<target name="jar" depends="clean, lib.copy, resource.copy, compile">
		<jar destfile="${jar.dir}/diylc.jar" basedir="${classes.dir}">
			<manifest>
				<attribute name="Built-By" value="${user.name}" />
				<attribute name="Main-Class" value="${main.class}" />
				<attribute name="Class-Path" value="${manifest.class.path}" />
				<attribute name="SplashScreen-Image" value="splash.png" />
			</manifest>
			<zipfileset dir="." includes="config.properties" />
		</jar>
	</target>

	<target name="mac" depends="jar">
		<unzip src="${osx.jre.x86.path}" dest="${build.dir}/jre_x86"/>
		<bundleapp
			        outputdirectory="${build.dir}"
			        name="DIYLC"
							jvmrequired="17"
							copyright="2025 bancika"
			        displayname="DIY Layout Creator"
			        identifier="org.diylc.Desktop"
			        shortversion="${diylc.version}"
			        applicationCategory="public.app-category.graphics-design"
							icon="icons/diylc.icns"
			        mainclassname="${main.class}">
							<bundledocument contentTypes="org.diylc.diy"
								name="DIYLC document"
								role="Editor"
								handlerRank="Owner">
							</bundledocument>
							<typedeclaration
								identifier="org.diylc.diy"
								description="DIYLC file type"
								icon="icons/diylc_file.icns"
								conformsTo="public.xml,public.text"
								extensions="diy" />
					<runtime dir="${build.dir}/jre_x86/Contents/Home" />
					<arch name="x86_64"/>
					<classpath file="${jar.dir}\diylc.jar" />
					<classpath file="${jar.dir}\lib\*.jar" />
					<classpath file="${jar.dir}\library\*.jar" />
					<option value="-Xms512m" />
					<option value="-Xmx4096m" />
					<!--<option value="-javaagent:Contents/Java/jar-loader.jar" />-->
					<option value="--add-exports=java.desktop/com.apple.eawt.event=ALL-UNNAMED" />
					<option value="--add-exports=java.desktop/com.apple.eio=ALL-UNNAMED" />
					<option value="--add-opens=java.base/java.util=ALL-UNNAMED" />
					<option value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
					<option value="--add-opens=java.base/java.text=ALL-UNNAMED" />
					<option value="--add-opens=java.desktop/java.awt=ALL-UNNAMED" />
					<option value="--add-opens=java.desktop/java.awt.font=ALL-UNNAMED" />
					<option value="--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED" />
					<option value="-Dorg.diylc.scriptRun=true" />
					<option value="-Dfile.encoding=UTF-8" />
					<option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
					<option value="-Dapple.laf.useScreenMenuBar=true"/>
					<option value="-Dapple.awt.application.name=DIY Layout Creator"/>
					<option value="-Dcom.apple.smallTabs=true"/>
					<option value="-Dsun.java2d.metal=true"/>
					<option value="-Xdock:name=DIY Layout Creator"/>
					<option value="-Xdock:icon=Contents/Resources/diylc.icns"/>
				</bundleapp>
				<zip destfile="${build.dir}/diylc-${diylc.version}-osx-x86.zip">
					<zipfileset filemode="755" dir="${build.dir}/DIYLC.app" prefix="DIYLC.app" />
					<zipfileset filemode="755" dir="${basedir}/themes" prefix="DIYLC.app/Contents/Resources/themes" />
					<zipfileset filemode="755" dir="${basedir}/fonts" prefix="DIYLC.app/Contents/Resources/fonts" />
					<zipfileset filemode="755" dir="${basedir}/lang" prefix="DIYLC.app/Contents/Resources/lang" />
				</zip>
			</target>
	
	<target name="mac-arm" depends="jar">
			<unzip src="${osx.jre.arm.path}" dest="${build.dir}/jre_arm"/>
			<bundleapp
		        outputdirectory="${build.dir}"
		        name="DIYLC"
						jvmrequired="17"
						copyright="2025 bancika"
		        displayname="DIY Layout Creator"
		        identifier="org.diylc.Desktop"
		        shortversion="${diylc.version}"
		        applicationCategory="public.app-category.graphics-design"
						icon="icons/diylc.icns"
		        mainclassname="${main.class}">
						<bundledocument contentTypes="org.diylc.diy"
							name="DIYLC document"
							role="Editor"
							handlerRank="Owner">
						</bundledocument>
						<typedeclaration
							identifier="org.diylc.diy"
							description="DIYLC file type"
							icon="icons/diylc_file.icns"
							conformsTo="public.xml,public.text"
							extensions="diy" />
				<runtime dir="${build.dir}/jre_arm/Contents/Home" />
				<arch name="arm64" />
				<arch name="arm64e" />
				<classpath file="${jar.dir}\diylc.jar" />
				<classpath file="${jar.dir}\lib\*.jar" />
				<classpath file="${jar.dir}\library\*.jar" />
				<option value="-Xms512m" />
				<option value="-Xmx4096m" />
				<!--<option value="-javaagent:Contents/Java/jar-loader.jar" />-->
				<option value="--add-exports=java.desktop/com.apple.eawt.event=ALL-UNNAMED" />
				<option value="--add-exports=java.desktop/com.apple.eio=ALL-UNNAMED" />
				<option value="--add-opens=java.base/java.util=ALL-UNNAMED" />
				<option value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
				<option value="--add-opens=java.base/java.text=ALL-UNNAMED" />
				<option value="--add-opens=java.desktop/java.awt=ALL-UNNAMED" />
				<option value="--add-opens=java.desktop/java.awt.font=ALL-UNNAMED" />
				<option value="--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED" />
				<option value="-Dorg.diylc.scriptRun=true" />
				<option value="-Dfile.encoding=UTF-8" />
				<option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
				<option value="-Dapple.laf.useScreenMenuBar=true"/>
				<option value="-Dapple.awt.application.name=DIY Layout Creator"/>
				<option value="-Dcom.apple.smallTabs=true"/>
				<option value="-Dsun.java2d.metal=true"/>
				<option value="-Xdock:name=DIY Layout Creator"/>
				<option value="-Xdock:icon=Contents/Resources/diylc.icns"/>
			</bundleapp>
			<zip destfile="${build.dir}/diylc-${diylc.version}-osx-arm.zip">
				<zipfileset filemode="755" dir="${build.dir}/DIYLC.app" prefix="DIYLC.app" />
				<zipfileset filemode="755" dir="${basedir}/themes" prefix="DIYLC.app/Contents/Resources/themes" />
				<zipfileset filemode="755" dir="${basedir}/fonts" prefix="DIYLC.app/Contents/Resources/fonts" />
				<zipfileset filemode="755" dir="${basedir}/lang" prefix="DIYLC.app/Contents/Resources/lang" />
			</zip>
		</target>

	<property name="izpack-dist" value="tools/IzPack" />

	<path id="lib.path">
		<fileset dir="${izpack-dist}/lib" includes="*.jar" />
	</path>

	<taskdef name="izpack" classname="com.izforge.izpack.ant.IzPackTask" classpathref="lib.path" />

	<target name="win" depends="jar">
		<unzip src="${win.jre.path}" dest="${build.dir}/jre_win"/>
		<exec executable="tools\innosetup\iscc.exe">
			<arg value="/Ddiylcver=${diylc.version}"/>
			<arg value="/Fdiylc-${diylc.version}-win"/>
			<arg value="tools/install.iss"/>
		</exec>
	</target>
	
	<target name="universal_installer" depends="jar">
		<izpack input="${basedir}/izpack.xml"
		            output="${build.dir}/diylc-${diylc.version}-setup.jar"
		            installerType="standard"
		            basedir="."
		            izPackDir="${izpack-dist}"/>
	</target>

	<target name="universal" depends="jar">
		<zip destfile="${build.dir}/diylc-${diylc.version}.zip">
			<zipfileset dir="${jar.dir}" includes="diylc.jar" />
			<zipfileset dir="${jar.dir}/lib" prefix="lib" />
			<zipfileset dir="${jar.dir}/library/" prefix="library" />
			<zipfileset dir="templates" prefix="templates" />
			<zipfileset dir="themes" prefix="themes" />
			<zipfileset dir="fonts" prefix="fonts" />
			<zipfileset dir="lang" prefix="lang" />
			<zipfileset dir="deploy" includes="splash.png" />
			<zipfileset dir="deploy" includes="run.sh" />
			<zipfileset dir="deploy" includes="diylc.l4j.ini" />
			<zipfileset dir="deploy" includes="diylc.exe" />
			<zipfileset dir="icons" includes="*.png" prefix="icons" />
			<zipfileset dir="flatpak" includes="com.diy_fever.DIYLayoutCreator.desktop" />
			<zipfileset dir="flatpak" includes="com.diy_fever.DIYLayoutCreator.metainfo.xml" />
			<!--<zipfileset dir="tools/jre/win/jre1.8.0_211" prefix="jre" />-->
		</zip>
		<checksum file="${build.dir}/diylc-${diylc.version}.zip" algorithm="SHA-256"/>
	</target>

	<target name="full" depends="win,universal,mac,mac-arm" />

	<target name="javadoc">
		<javadoc access="public" author="true" classpathref="class.path" destdir="doc" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" source="1.6" splitindex="true" use="true" version="true">
			<fileset dir="${src.dir}">
				<exclude name="**\.svn\**" />
				<include name="**/*.java" />
			</fileset>
		</javadoc>
	</target>

</project>
